profile and cover image updates

--- a/css/style.css
+++ b/css/style.css
@@ -247,3 +247,9 @@
     text-decoration: none;
     text-transform: capitalize;
 }
+
+#progressCover {
+    color: red;
+    text-decoration: none;
+    text-transform: capitalize;
+}
