--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,18 @@
 
 .tweetSection {
     width: 43%;
+    position: relative;
     height: 100vh;
     border-left: 1px rgba(128, 128, 128, 0.168) solid;
     border-right: 1px rgba(128, 128, 128, 0.168) solid;
+}
+
+.tweetBox textarea {
+    width: 90%;
+    margin-left: 20px;
+    border: none;
+    outline: none;
+    font-size: 20px;
 }
 
 #allTweetsContainer {
@@ -78,6 +87,7 @@
 .homeRight {
     width: 24%;
     height: 100vh;
+    overflow-y: scroll;
 }
 
 .profilePlaceholder {
@@ -281,4 +291,72 @@
 .likeIcon {
     height: 20px;
     cursor: pointer;
+}
+
+.textBox {
+    position: fixed;
+    bottom: 0px;
+    width: 43%;
+    border-top: rgba(128, 128, 128, 0.124) 1px solid;
+}
+
+.messImgCont {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.messImgCont img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+#showAllUsers {
+    padding-top: 50px;
+}
+
+.messUserCont {
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.168);
+}
+
+.messUserCont:hover {
+    background-color: rgba(128, 128, 128, 0.271)
+}
+
+.messUserCont h6 {
+    margin-left: 20px;
+}
+
+.messUserCont p {
+    margin-left: 20px;
+}
+
+.myMsgSent {
+    background-color: greenyellow;
+    position: absolute;
+    right: 0;
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    margin: 20px;
+}
+
+.myMsgReceived {
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    margin: 20px;
+    background-color: rgba(128, 128, 128, 0.325);
+    width: fit-content;
 }
